plugins {
    id 'java'
    id 'jacoco'
    id 'checkstyle'
    id 'org.springframework.boot' version '3.4.2' // Alineado con la versión estable de la guía del Dojo
    id 'io.spring.dependency-management' version '1.1.7'
    id 'org.sonarqube' version '6.0.0.5145' // Versión actualizada y compatible de Sonar
}

group = 'com.traceability'
version = '0.1.0-SNAPSHOT' // Mantenemos la versión inicial estándar

java {
    toolchain {
        languageVersion = JavaLanguageVersion.of(21)
    }
}

repositories {
    mavenCentral()
}

configurations {
    compileOnly {
        extendsFrom annotationProcessor
    }
}

dependencies {
    // ── Spring Boot Core
    implementation 'org.springframework.boot:spring-boot-starter-web'
    implementation 'org.springframework.boot:spring-boot-starter-data-jpa'
    implementation 'org.springframework.boot:spring-boot-starter-actuator'
    implementation 'org.springframework.boot:spring-boot-starter-security'
    implementation 'org.springframework.boot:spring-boot-starter-validation'

    // ── Caché (Exclusivo Redis Nativo)
    implementation 'org.springframework.boot:spring-boot-starter-cache'
    implementation 'org.springframework.boot:spring-boot-starter-data-redis'

    // ── Resiliencia e Integración
    implementation 'io.github.resilience4j:resilience4j-spring-boot3:2.2.0'
    implementation 'org.springframework.boot:spring-boot-starter-mail'

    // ── Base de Datos y Migraciones (Supabase/PostgreSQL)
    implementation 'org.flywaydb:flyway-core'
    implementation 'org.flywaydb:flyway-database-postgresql'
    runtimeOnly 'org.postgresql:postgresql'

    // ── Documentación OpenAPI / Swagger
    implementation 'org.springdoc:springdoc-openapi-starter-webmvc-ui:2.8.8'

    // ── Utilidades (Lombok)
    compileOnly 'org.projectlombok:lombok'
    annotationProcessor 'org.projectlombok:lombok'

    // ── Entorno de Desarrollo
    developmentOnly 'org.springframework.boot:spring-boot-devtools'

    // ── Pruebas Unitarias y de Integración (Mockito + Testcontainers)
    testImplementation 'org.springframework.boot:spring-boot-starter-test'
    testImplementation 'org.springframework.security:spring-security-test'
    testImplementation 'org.springframework.boot:spring-boot-testcontainers'
    testImplementation 'org.testcontainers:junit-jupiter'
    testImplementation 'org.testcontainers:postgresql'
}

// ── Configuración de JaCoCo (Cobertura)
jacoco {
    toolVersion = '0.8.12'
}

jacocoTestReport {
    dependsOn test
    reports {
        xml.required.set(true)
        html.required.set(true)
    }
    afterEvaluate {
        classDirectories.setFrom(files(classDirectories.files.collect {
            fileTree(dir: it, exclude: [
                    'com/traceability/solicitudes/config/**',
                    'com/traceability/solicitudes/model/**',
                    'com/traceability/solicitudes/exception/**',
                    'com/traceability/solicitudes/controller/**',
                    'com/traceability/solicitudes/SolicitudesApplication.class',
                    'com/traceability/solicitudes/dto/**'
            ])
        }))
    }
}

jacocoTestCoverageVerification {
    dependsOn jacocoTestReport
    afterEvaluate {
        classDirectories.setFrom(files(classDirectories.files.collect {
            fileTree(dir: it, exclude: [
                    'com/traceability/solicitudes/config/**',
                    'com/traceability/solicitudes/model/**',
                    'com/traceability/solicitudes/exception/**',
                    'com/traceability/solicitudes/controller/**',
                    'com/traceability/solicitudes/SolicitudesApplication.class'
            ])
        }))
    }
    violationRules {
        rule {
            limit {
                minimum = 0.80 // Umbral estricto del 80% exigido por Pastrana
            }
        }
    }
}

// ── Configuración de Checkstyle (Estilo de código)
checkstyle {
    toolVersion = '10.21.4'
    configFile = file('checkstyle.xml')
    ignoreFailures = false // Si falla el estilo, se detiene el build (Calidad Asegurada)
    showViolations = true
}

// ── Configuración Real de SonarCloud (Garantiza conexión con ServiPlus)
sonar {
    properties {
        property 'sonar.projectKey', 'ServiPlus-S-A_api-solicitudes'
        property 'sonar.organization', 'serviplus-s-a'
        property 'sonar.host.url', 'https://sonarcloud.io'
        property 'sonar.java.coveragePlugin', 'jacoco'
        property 'sonar.coverage.jacoco.xmlReportPaths', 'build/reports/jacoco/test/jacocoTestReport.xml'
        property 'sonar.exclusions', '**/config/**,**/model/**,**/exception/**,**/controller/**,**/*Application*'
        property 'sonar.java.source', '21'
        property "sonar.pullrequest.provider", "GitHub"
        property "sonar.pullrequest.github.repository", "ServiPlus-S-A/api-solicitudes"
    }
}

// ── Ciclo de Vida y Orden de Ejecución Estricto (Estrategia DevOps)
test {
    useJUnitPlatform()
    finalizedBy jacocoTestReport
}

check {
    dependsOn jacocoTestCoverageVerification
}

// Vincula Sonar para que dependa de Check (No sube código a Sonar si fallan pruebas o cobertura)
tasks.named('sonar') {
    dependsOn check
}